--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -30,6 +30,26 @@ nav {
 	}
 }
 
+.about-cover-photo{
+	position: realative;
+	width: 100%;
+	height: 700px;
+	overflow: hidden;
+	img{
+		width: 100%;
+		object-fit: cover;
+	}
+}
+
+.about-content{
+	position: absolute;
+	top: 25%;
+	left: 25%;
+	width: 50%;
+	text-align: center;
+	margin: auto;
+}
+
 .avatar {
 	position: fixed;
 	top: 20px;
@@ -82,6 +102,8 @@ nav {
 			background-clip: text;
   				-webkit-text-fill-color: transparent;
 			color: transparent;
+			transition: all 0.5s;
+			-webkit-transition: all 0.5s;
 		}
 	}
 	p{
