--- a/app/assets/stylesheets/reset.scss
+++ b/app/assets/stylesheets/reset.scss
@@ -10,7 +10,7 @@ span, article, footer, time, small {
   border: 0;
   outline: 0;
   font: inherit;
-  color: inherit;
+  color: #666;
   text-align: inherit;
   text-decoration: inherit;
   vertical-align: inherit;
