--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,6 +1,7 @@
 /* PHASE 0: Reset */
 @import url("https://use.fontawesome.com/releases/v5.0.9/css/all.css");
 @import url("https://fonts.googleapis.com/css?family=Roboto");
+@import url("https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css");
 html, body, header, nav, h1, a,
 ul, li, strong, main, button, i,
 section, img, div, h2, p, form,
@@ -11,7 +12,7 @@ span, article, footer, time, small {
   border: 0;
   outline: 0;
   font: inherit;
-  color: inherit;
+  color: #666;
   text-align: inherit;
   text-decoration: inherit;
   vertical-align: inherit;
@@ -69,6 +70,8 @@ input[type="submit"] {
 
 nav {
   position: fixed;
+  margin-bottom: 75px;
+  z-index: 5;
   height: 75px;
   top: 0;
   padding: 15px;
@@ -88,7 +91,32 @@ nav {
   nav li {
     cursor: pointer; }
   nav li:hover {
-    text-decoration: underline; }
+    text-decoration: underline;
+    transition: all 0.5s; }
+
+.selected {
+  color: white;
+  font-weight: 999;
+  text-decoration: underline;
+  transition: all 0.5s; }
+
+.avatar {
+  z-index: 7;
+  position: fixed;
+  top: 20px;
+  left: 45%;
+  height: 150px;
+  width: 150px;
+  border-radius: 50%;
+  overflow: hidden; }
+  .avatar img {
+    height: 100%;
+    object-fit: cover; }
+
+h1 {
+  font-size: 36px;
+  font-weight: 800;
+  margin-bottom: 30px; }
 
 .about-cover-photo {
   position: realative;
@@ -107,24 +135,50 @@ nav {
   text-align: center;
   margin: auto; }
 
-.avatar {
-  position: fixed;
-  top: 20px;
-  left: 45%;
-  height: 150px;
-  width: 150px;
-  border-radius: 50%;
-  overflow: hidden; }
-  .avatar img {
-    height: 100%;
-    object-fit: cover; }
+.skill-title {
+  text-align: center;
+  width: 60%;
+  margin: auto; }
+
+#skill {
+  margin-top: 250px; }
+
+.hidden {
+  display: none; }
+
+.skills {
+  width: 60%;
+  margin: auto; }
+  .skills i {
+    cursor: pointer;
+    position: relative;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    float: left;
+    font-size: 148px; }
+  .skills .icon-wordmark {
+    padding-top: 60px;
+    text-shadow: 1px 1px 2px #000000;
+    color: white;
+    text-align: center;
+    font-weight: 999;
+    position: absolute;
+    height: 148px;
+    width: 148px;
+    top: 0;
+    left: 0;
+    font-size: 24px; }
+  .skills i:hover {
+    opacity: 0.5;
+    background: linear-gradient(rgba(20, 20, 20, 0.5), rgba(20, 20, 20, 0.5));
+    transition: all 0.5s; }
 
 .footer {
   margin-top: 200px;
   padding-top: 30px;
   background: linear-gradient(#bdc3c7, #bdc3c7);
   width: 100%;
-  height: 200px;
+  height: 150px;
   text-align: center; }
   .footer div {
     width: 50%;
