--- a/app/assets/stylesheets/reset.scss
+++ b/app/assets/stylesheets/reset.scss
@@ -16,7 +16,7 @@ span, article, footer, time, small {
   vertical-align: inherit;
   box-sizing: inherit;
   background: transparent;
-  font-family: 'Robot', sans-serif;
+  font-family: 'Quicksand', sans-serif;
 }
 
 ul {
