--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -274,4 +274,45 @@ h1 {
 .order-2 {
   flex-direction: row-reverse; }
 
+#contact {
+  width: 60%;
+  margin: 50px auto; }
+  #contact form {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    #contact form div {
+      display: flex; }
+      #contact form div div {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        margin-right: 20px; }
+        #contact form div div input {
+          border: 1px solid #bdc3c7;
+          margin-bottom: 10px;
+          border-radius: 5px; }
+      #contact form div textarea {
+        border: 1px solid #bdc3c7;
+        border-radius: 5px;
+        height: 100%;
+        resize: none; }
+    #contact form input[type='submit'] {
+      margin-top: 20px;
+      padding: 5px 10px;
+      border: 1px solid #bdc3c7;
+      border-radius: 5px;
+      background-color: #bdc3c7; }
+    #contact form input[type='submit']:hover {
+      color: white;
+      font-size: bold;
+      background-color: gray;
+      border: 1px solid gray; }
+
+.message-notification {
+  border-radius: 5px;
+  padding: 5px 10px;
+  background: linear-gradient(#A1FFCE, #FAFFD1);
+  margin-bottom: 15px; }
+
 /*# sourceMappingURL=style.css.map */
