--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -267,16 +267,32 @@ h1{
 				flex-direction: column;
 				margin-right: 20px;
 				input{
+					font-size: 14px;
+					text-align: left;
+					padding: 7px 15px;
 					border: 1px solid #bdc3c7;
 					margin-bottom: 10px;
 					border-radius: 5px;
 				}
 			}
-			textarea{
+			.contact-message{
+				display: flex;
+				flex-direction: column;
 				border: 1px solid #bdc3c7;
 				border-radius: 5px;
-				height: 100%;
-				resize: none;
+				textarea{
+					text-align: left;
+					font-size: 14px;
+					padding: 10px;
+					width: 100%;
+					height: 80%;
+					resize: none;
+				}
+				div{
+					font-size: 12px;
+					color: red;
+				}
+				
 			}
 		}
 		input[type='submit']{
