--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -289,14 +289,27 @@ h1 {
         flex-direction: column;
         margin-right: 20px; }
         #contact form div div input {
+          font-size: 14px;
+          text-align: left;
+          padding: 7px 15px;
           border: 1px solid #bdc3c7;
           margin-bottom: 10px;
           border-radius: 5px; }
-      #contact form div textarea {
+      #contact form div .contact-message {
+        display: flex;
+        flex-direction: column;
         border: 1px solid #bdc3c7;
-        border-radius: 5px;
-        height: 100%;
-        resize: none; }
+        border-radius: 5px; }
+        #contact form div .contact-message textarea {
+          text-align: left;
+          font-size: 14px;
+          padding: 10px;
+          width: 100%;
+          height: 80%;
+          resize: none; }
+        #contact form div .contact-message div {
+          font-size: 12px;
+          color: red; }
     #contact form input[type='submit'] {
       margin-top: 20px;
       padding: 5px 10px;
