--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -280,24 +280,29 @@ h1 {
   #contact form {
     display: flex;
     flex-direction: column;
-    align-items: center; }
+    align-items: center;
+    width: 100%; }
     #contact form div {
-      display: flex; }
+      width: 100%;
+      display: flex;
+      align-ites: center;
+      justify-content: space-between; }
       #contact form div div {
-        flex: 1;
+        width: 48%;
+        height: 150px;
         display: flex;
         flex-direction: column;
-        margin-right: 20px; }
+        justify-content: space-between; }
         #contact form div div input {
           font-size: 14px;
           text-align: left;
           padding: 7px 15px;
           border: 1px solid #bdc3c7;
-          margin-bottom: 10px;
           border-radius: 5px; }
       #contact form div .contact-message {
         display: flex;
         flex-direction: column;
+        justify-content: space-between;
         border: 1px solid #bdc3c7;
         border-radius: 5px; }
         #contact form div .contact-message textarea {
@@ -305,14 +310,11 @@ h1 {
           font-size: 14px;
           padding: 10px;
           width: 100%;
-          height: 80%;
+          height: 90%;
           resize: none; }
-        #contact form div .contact-message div {
-          font-size: 12px;
-          color: red; }
     #contact form input[type='submit'] {
       margin-top: 20px;
-      padding: 5px 10px;
+      padding: 10px 30px;
       border: 1px solid #bdc3c7;
       border-radius: 5px;
       background-color: #bdc3c7; }
@@ -322,10 +324,23 @@ h1 {
       background-color: gray;
       border: 1px solid gray; }
 
-.message-notification {
+.error {
+  width: 100%;
+  font-size: 12px;
+  color: red; }
+
+.message-notification, .error-send-email {
   border-radius: 5px;
   padding: 5px 10px;
-  background: linear-gradient(#A1FFCE, #FAFFD1);
-  margin-bottom: 15px; }
+  margin-bottom: 15px;
+  transition: all 0.5s; }
+
+.message-notification {
+  background-color: #d0f2db; }
+
+.error-send-email {
+  background-color: #fcd6d3; }
+  .error-send-email a:hover {
+    text-decoration: underline; }
 
 /*# sourceMappingURL=style.css.map */
