--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -132,20 +132,11 @@ h1 {
   font-weight: 999;
   margin-bottom: 30px; }
 
-.about-cover-photo {
-  position: realative;
-  width: 100%;
-  height: 700px;
-  overflow: hidden; }
-  .about-cover-photo img {
-    width: 100%;
-    object-fit: cover; }
+#about {
+  padding-top: 250px; }
 
 .about-content {
-  position: absolute;
-  top: 25%;
-  left: 25%;
-  width: 50%;
+  width: 60%;
   text-align: center;
   margin: auto; }
 
@@ -342,5 +333,11 @@ h1 {
   background-color: #fcd6d3; }
   .error-send-email a:hover {
     text-decoration: underline; }
+
+.about-content-main {
+  line-height: 1.5;
+  font-size: 18px; }
+  .about-content-main strong {
+    font-weight: bold; }
 
 /*# sourceMappingURL=style.css.map */
