--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -268,6 +268,14 @@ h1{
 					border: 1px solid #bdc3c7;
 					border-radius: 5px;
 				}
+				.error{
+					padding-left: 10px;
+					text-align: left;
+					width: 100%;
+					font-size: 12px;
+					color: red;
+					animation: fadein 2s;
+				}
 			}
 			.contact-message{
 				display: flex;
@@ -276,12 +284,15 @@ h1{
 				border: 1px solid #bdc3c7;
 				border-radius: 5px;
 				textarea{
+					height: 80%;
 					text-align: left;
 					font-size: 14px;
 					padding: 10px;
-					width: 100%;
-					height: 90%;
+					width: 90%;
 					resize: none;
+				}
+				.error{
+					height: 10%;
 				}				
 			}
 		}
@@ -301,11 +312,11 @@ h1{
 	}
 }
 
-.error{
-	width: 100%;
-	font-size: 12px;
-	color: red;
+@keyframe fadein {
+	from {opacity: 0;}
+	to {opacity: 1;}
 }
+
 
 .message-notification, .error-send-email{
 	border-radius: 5px;
