--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -290,6 +290,13 @@ h1 {
           padding: 7px 15px;
           border: 1px solid #bdc3c7;
           border-radius: 5px; }
+        #contact form div div .error {
+          padding-left: 10px;
+          text-align: left;
+          width: 100%;
+          font-size: 12px;
+          color: red;
+          animation: fadein 2s; }
       #contact form div .contact-message {
         display: flex;
         flex-direction: column;
@@ -297,12 +304,14 @@ h1 {
         border: 1px solid #bdc3c7;
         border-radius: 5px; }
         #contact form div .contact-message textarea {
+          height: 80%;
           text-align: left;
           font-size: 14px;
           padding: 10px;
-          width: 100%;
-          height: 90%;
+          width: 90%;
           resize: none; }
+        #contact form div .contact-message .error {
+          height: 10%; }
     #contact form input[type='submit'] {
       margin-top: 20px;
       padding: 10px 30px;
@@ -315,11 +324,12 @@ h1 {
       background-color: gray;
       border: 1px solid gray; }
 
-.error {
-  width: 100%;
-  font-size: 12px;
-  color: red; }
+@keyframe fadein {
+  from {
+    opacity: 0; }
 
+  to {
+    opacity: 1; } }
 .message-notification, .error-send-email {
   border-radius: 5px;
   padding: 5px 10px;
