modified about me content

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -346,8 +346,27 @@ h1 {
 
 .about-content-main {
   line-height: 1.5;
-  font-size: 18px; }
+  font-size: 18px;
+  text-align: left; }
+  .about-content-main hr {
+    border: none; }
   .about-content-main strong {
     font-weight: bold; }
+  .about-content-main a {
+    cursor: pointer;
+    color: blue; }
+  .about-content-main a:hover {
+    text-decoration: underline; }
+
+.about-content-second h2 {
+  font-size: 24px;
+  font-weight: 800;
+  margin: 50px auto; }
+.about-content-second div {
+  width: 100%;
+  height: 250px;
+  display: flex; }
+  .about-content-second div .hobby-container {
+    flex: 1; }
 
 /*# sourceMappingURL=style.css.map */
