--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -339,7 +339,35 @@ h1{
 .about-content-main{
 	line-height: 1.5;
 	font-size: 18px;
+	text-align: left;
+	hr{
+		border: none;
+	}
 	strong{
 		font-weight: bold;
+	}
+	a{
+		cursor: pointer;
+		color: blue;
+	}
+	a:hover{
+		text-decoration: underline;
+	}
+}
+
+.about-content-second{
+	h2{
+		font-size: 24px;
+		font-weight: 800;
+		margin: 50px auto;	
+	}
+
+	div{
+		width: 100%;
+		height: 250px;
+		display: flex;
+		.hobby-container{
+			flex: 1;
+		}
 	}
 }
