--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -4,6 +4,7 @@
 // @import url("https://fonts.googleapis.com/css?family=Roboto");
 @import url("https://fonts.googleapis.com/css?family=Quicksand");
 @import url('https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css');
+@import url('https://www.w3schools.com/w3css/4/w3.css');
 
 nav {
 	position: fixed;
@@ -43,7 +44,7 @@ nav {
 	}
 	li:hover{
 		border-bottom: 3px solid white;
-		transition: all 0.5s;
+		transition: all 1s;
 	}
 }
 
@@ -51,7 +52,7 @@ nav {
 	border-bottom: 3px solid white;
 	color: white;
 	font-weight: 900;
-	transition: all 0.5s;
+	transition: all 1s;
 }
 
 .avatar {
@@ -68,7 +69,7 @@ nav {
 	img{
 		height: 100%;
 		object-fit: cover;
-		transition: height 1s width 1s;
+		transition: opacity 1s;
 	}
 }
 
@@ -78,15 +79,7 @@ h1{
 	margin-bottom: 30px;
 }
 
-#about{
-	padding-top: 250px;
-}
 
-.about-content{
-	width: 60%;
-	text-align: center;
-	margin: auto;
-}
 
 .skill-title{
 	text-align: center;
@@ -129,7 +122,7 @@ h1{
 	i:hover{
 		opacity: 0.5;
 		// background: linear-gradient( rgba(20,20,20, .5), rgba(20,20,20, .5));
-		transition: all 0.5s;
+		transition: all 1s;
 	}
 }
 
@@ -150,7 +143,7 @@ h1{
 			font-size: 48px;
 		}
 		i:hover{
-			transition: all 0.5s;
+			transition: all 1s;
 		}
 		.fa-linkedin:hover{
 			color: #0073b1;
@@ -221,6 +214,7 @@ h1{
 	align-items: center;
 	justify-content: center;	
 	text-shadow: 0.1px 0.1px 0.1px #000000;
+	transition: opacity 1s;
 	h2{
 		font-weight: bold;
 		font-size: 36px;
@@ -258,6 +252,7 @@ h1{
 	flex-direction: column;
 	justify-content: space-around;
 	align-items: center;
+	transition: opacity 2s;
 	i{
 		font-size: 48px;
 	}
@@ -295,7 +290,7 @@ h1{
 					width: 100%;
 					font-size: 12px;
 					color: red;
-					animation: fadein 2s;
+					transition: opacity 1s;
 				}
 			}
 			.contact-message{
@@ -333,17 +328,13 @@ h1{
 	}
 }
 
-@keyframe fadein {
-	from {opacity: 0;}
-	to {opacity: 1;}
-}
 
 
 .message-notification, .error-send-email{
 	border-radius: 5px;
 	padding: 5px 10px;
 	margin-bottom: 15px;
-	transition: all 0.5s;
+	transition: opacity 0.5s;
 }
 
 .message-notification{
@@ -357,7 +348,19 @@ h1{
 	}
 }
 
+#about{
+	padding-top: 250px;
+}
+
+.about-content{
+	width: 100%;
+	text-align: center;
+	margin: auto;
+}
+
 .about-content-main{
+	width: 60%;
+	margin: auto;
 	line-height: 1.5;
 	font-size: 18px;
 	text-align: left;
@@ -377,18 +380,27 @@ h1{
 }
 
 .about-content-second{
+	width: 100%;
 	h2{
 		font-size: 24px;
 		font-weight: 800;
 		margin: 50px auto;	
 	}
 
-	div{
+	.about-content-second-list{
 		width: 100%;
 		height: 250px;
 		display: flex;
 		.hobby-container{
 			flex: 1;
+			height: 300px;
+			overflow: hidden;
+			img{
+				height: 100%;
+				object-fit: cover;
+				transition: opacity 2s;
+			}
 		}
 	}
 }
+
