--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -223,6 +223,13 @@ h1 {
   width: 100%;
   height: 48%; }
 
+.single-project:hover {
+  box-shadow: 0 5px 5px 0 #adb5bd; }
+
+.single-project:hover .project-cover {
+  opacity: 0;
+  transition: opacity 1s; }
+
 .project-screenshoot {
   border-radius: 5px;
   position: relative;
@@ -268,6 +275,7 @@ h1 {
   width: 100%;
   top: 0;
   left: 0;
+  color: white;
   background-color: black;
   opacity: 0.8;
   display: flex;
@@ -275,8 +283,17 @@ h1 {
   justify-content: space-around;
   align-items: center;
   transition: opacity 2s; }
-  .link i {
-    font-size: 48px; }
+  .link p {
+    opacity: 1; }
+  .link div {
+    z-index: 10;
+    opacity: 0.5; }
+    .link div i {
+      color: white;
+      font-size: 48px; }
+  .link div:hover {
+    opacity: 1;
+    transition: opacity 1s; }
 
 #contact {
   width: 60%;
