--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -232,8 +232,7 @@ h1{
 }
 
 .white{
-	background-color: white;
-	opacity: 0.5;
+	background: rgba(255, 255, 255, 0.5);		
 	h2{
 		color: black;
 	}
@@ -241,33 +240,27 @@ h1{
 
 
 .black{
-	background-color: black;
-	opacity: 0.5;
+	background: rgba(0, 0, 0, 0.5);			
 	h2{
 		color: white;
 	}
 }
 
 .link{
-	color: white;
 	position: absolute;
 	height: 100%;
 	width: 100%;
 	top: 0;
 	left: 0;
-	color: white;
-	background-color: black;
-	opacity: 0.8;
+	background: rgba(0, 0, 0, 0.8);	
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
 	align-items: center;
-	transition: opacity 2s;
 	p{
-		opacity: 1;
+		color: white;
 	}
 	div{
-		z-index: 10;
 		opacity: 0.5;
 		i{
 			color: white;
@@ -414,15 +407,39 @@ h1{
 		height: 250px;
 		display: flex;
 		.hobby-container{
+			position: relative;
 			flex: 1;
-			height: 300px;
+			height: 400px;
 			overflow: hidden;
+			animation-duration: 1s;
 			img{
 				height: 100%;
 				object-fit: cover;
-				transition: opacity 2s;
+				opacity: 0.8;
+			}
+		}
+		.hobby-container:hover{
+			img{
+				opacity: 1;
+				transition: all 1s;
+			}
+		}
+		.hobby-content{
+			height: 100%;
+			width: 100%;
+			display: flex;
+			align-items: center;
+			position: absolute;
+			top: 0;
+			left: 0;
+			background: rgba(0, 0, 0, 0.3);
+			div{
+				width: 100%;
+				color: white;
+				text-align: center;	
+				font-size: 32px;
+				font-weight: bold;
 			}
 		}
 	}
 }
-
