--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -257,36 +257,29 @@ h1 {
     opacity: 1; }
 
 .white {
-  background-color: white;
-  opacity: 0.5; }
+  background: rgba(255, 255, 255, 0.5); }
   .white h2 {
     color: black; }
 
 .black {
-  background-color: black;
-  opacity: 0.5; }
+  background: rgba(0, 0, 0, 0.5); }
   .black h2 {
     color: white; }
 
 .link {
-  color: white;
   position: absolute;
   height: 100%;
   width: 100%;
   top: 0;
   left: 0;
-  color: white;
-  background-color: black;
-  opacity: 0.8;
+  background: rgba(0, 0, 0, 0.8);
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  align-items: center;
-  transition: opacity 2s; }
+  align-items: center; }
   .link p {
-    opacity: 1; }
+    color: white; }
   .link div {
-    z-index: 10;
     opacity: 0.5; }
     .link div i {
       color: white;
@@ -403,12 +396,32 @@ h1 {
     height: 250px;
     display: flex; }
     .about-content-second .about-content-second-list .hobby-container {
+      position: relative;
       flex: 1;
-      height: 300px;
-      overflow: hidden; }
+      height: 400px;
+      overflow: hidden;
+      animation-duration: 1s; }
       .about-content-second .about-content-second-list .hobby-container img {
         height: 100%;
         object-fit: cover;
-        transition: opacity 2s; }
+        opacity: 0.8; }
+    .about-content-second .about-content-second-list .hobby-container:hover img {
+      opacity: 1;
+      transition: all 1s; }
+    .about-content-second .about-content-second-list .hobby-content {
+      height: 100%;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background: rgba(0, 0, 0, 0.3); }
+      .about-content-second .about-content-second-list .hobby-content div {
+        width: 100%;
+        color: white;
+        text-align: center;
+        font-size: 32px;
+        font-weight: bold; }
 
 /*# sourceMappingURL=style.css.map */
