--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -65,7 +65,7 @@ nav {
 	width: 150px;
 	border-radius: 50%;
 	overflow: hidden;
-    box-shadow: 0 5px 5px 0 #adb5bd;
+    box-shadow: 0px 5px 5px rgba(0,0,0,0.3);
 	img{
 		height: 100%;
 		object-fit: cover;
@@ -193,7 +193,7 @@ h1{
 }
 
 .single-project:hover{
-    box-shadow: 0 5px 5px 0 #adb5bd;
+    box-shadow: 0px 8px 25px 0 rgba(0,0,0,0.3);
 }
 
 .single-project:hover .project-cover{
@@ -257,8 +257,12 @@ h1{
 	flex-direction: column;
 	justify-content: space-around;
 	align-items: center;
+	text-align: center;
+	transition: background 1s ease,
+				padding 1s linear;
 	p{
 		color: white;
+		margin: 0 20px;
 	}
 	div{
 		opacity: 0.5;
@@ -332,6 +336,7 @@ h1{
 			padding: 10px 30px;
 			border: 1px solid #bdc3c7;
 			border-radius: 5px;
+			font-size: bold;
 			background-color: #bdc3c7;
 		}
 		input[type='submit']:hover{
@@ -339,6 +344,8 @@ h1{
 			font-size: bold;
 			background-color: gray;
 			border: 1px solid gray;
+    		box-shadow: 0px 8px 30px rgba(0,0,0,0.2);
+			transition: all 1s;
 		}
 	}
 }
