--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -122,7 +122,7 @@ nav {
   width: 150px;
   border-radius: 50%;
   overflow: hidden;
-  box-shadow: 0 5px 5px 0 #adb5bd; }
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3); }
   .avatar img {
     height: 100%;
     object-fit: cover;
@@ -224,7 +224,7 @@ h1 {
   height: 48%; }
 
 .single-project:hover {
-  box-shadow: 0 5px 5px 0 #adb5bd; }
+  box-shadow: 0px 8px 25px 0 rgba(0, 0, 0, 0.3); }
 
 .single-project:hover .project-cover {
   opacity: 0;
@@ -276,9 +276,12 @@ h1 {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  align-items: center; }
+  align-items: center;
+  text-align: center;
+  transition: background 1s ease, padding 1s linear; }
   .link p {
-    color: white; }
+    color: white;
+    margin: 0 20px; }
   .link div {
     opacity: 0.5; }
     .link div i {
@@ -340,12 +343,15 @@ h1 {
       padding: 10px 30px;
       border: 1px solid #bdc3c7;
       border-radius: 5px;
+      font-size: bold;
       background-color: #bdc3c7; }
     #contact form input[type='submit']:hover {
       color: white;
       font-size: bold;
       background-color: gray;
-      border: 1px solid gray; }
+      border: 1px solid gray;
+      box-shadow: 0px 8px 30px rgba(0, 0, 0, 0.2);
+      transition: all 1s; }
 
 .message-notification, .error-send-email {
   border-radius: 5px;
