--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -209,19 +209,17 @@ h1 {
 
 .project-list {
   width: 60%;
+  min-width: 600px;
   margin: auto;
   display: flex;
-  justify-content: space-between; }
-
-.project-col {
-  width: 48%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between; }
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around; }
 
 .single-project {
-  width: 100%;
-  height: 30%; }
+  width: 45%;
+  height: 250px;
+  margin-bottom: 25px; }
 
 .single-project:hover {
   box-shadow: 0px 8px 25px 0 rgba(0, 0, 0, 0.3); }
